--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,49 +1,10 @@
 <div class="index-page">
 
-  <h1>{{title}}</h1>
-  <p>starting point and example code</p>
-
-  <h2>file uploads</h2>
-
-  <form class="box" action="/upload/upload-file-form" enctype="multipart/form-data" method="post" id="theform">
-
-    <div class="file has-name" id="file-chooser-widget">
-      <label class="file-label">
-        <input class="file-input" id="theinputfield" type="file" name="thefile">
-        <span class="file-cta">
-          <span class="file-icon">
-            <i class="fa fa-upload"></i>
-          </span>
-          <span class="file-label">
-            Choose a file…
-          </span>
-        </span>
-        <span class="file-name" id="fn">
-          ...
-        </span>
-      </label>
-    </div>
-
-    <p>
-      <input class="button" type="submit" value="Send file (submit)" id="theSubmitButton">
-      <input class="button" type="button" value="Send file (ajax)" id="theAjaxButton">
-    </p>
-  </form>
-
-  <article class="message">
-    <div class="message-header">
-      <p>AJAX response</p>
-    </div>
-    <div class="message-body">
-      <div id="ajaxResponse">(...)</div>
-    </div>
-  </article>
-
-  <h2>todos from a db call</h2>
+  <h1>Demos:</h1>
   <ul>
-    {{#each todos}}
-      <li>{{ this.task }}</li>
-    {{/each}}
+    <li><a href="/db">db</a></li>
+    <li><a href="/upload">file upload</a></li>
+    <li><a href="/protected">protected page</a></li>
   </ul>
 
 </div>
